--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+a {
+	border: none;
+	text-decoration: none;
+	outline: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul,
+li {
+	list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+	max-width: 1920px;
+	margin: 0 auto;
+
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	font-size: 18px;
+	/* line-height: 20px; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+	padding: 0 20px;
+	margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+	cursor: pointer;
+}
+
+
+
+@media (min-width: 1600px) {
+	body {
+		padding: 0 60px;
+	}
+
+}
+
+@media (max-width: 768px) {
+	.title {
+		padding-top: 25px;
+			}
 }
