--- a/src/components/CategoriesList/CategoriesList.module.css
+++ b/src/components/CategoriesList/CategoriesList.module.css
@@ -1,4 +1,4 @@
-.categories_list {
+/* .categories_list {
 	margin: 40px 0 40px;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, 318px);
@@ -12,6 +12,23 @@
 	.categories_list {
 		margin: 30px 0 30px;
 		justify-content: center;
+
+	}
+} */
+
+.categories_list {
+	margin: 80px 0 40px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 318px);
+	justify-items: center;
+	justify-content: center;
+	grid-column-gap: 35px;
+	grid-row-gap: 55px;
+}
+
+@media (max-width: 762px) {
+	.categories_list {
+		margin: 50px 0 40px;
 
 	}
 }
