--- a/src/components/BurgerMenu/navbar.css
+++ b/src/components/BurgerMenu/navbar.css
@@ -91,7 +91,7 @@
     transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
 }
 
-@media screen and (width < 750px) {
+@media screen and (max-width: 750px) {
     .wrapper {
         display: block;
         height: auto;
