--- a/src/components/CouponForm/CouponForm.module.css
+++ b/src/components/CouponForm/CouponForm.module.css
@@ -115,6 +115,12 @@
 	opacity: 1;
 }
 
+@media (max-width: 1138px) {
+
+    .wrapper {
+       gap: 5px;
+    }
+}
 
 @media (max-width: 768px) {
     .textWrapper {
